<resources>
    <string name="app_name">Foodbook</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment_title">Recipes</string>
    <string name="favorite_recipes_fragment_title">Favorites</string>
    <string name="browsing_history_fragment_title">Browsing History</string>
    <string name="error_textView">No internet connection.</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque rhoncus non augue non fringilla.</string>
    <string name="vegan">Vegan</string>
    <string name="number_placeholder">100</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="primal">Primal</string>
    <string name="low_fodmap">Low FODMAP</string>
    <string name="whole30">Whole30</string>
    <string name="paleo">Paleo</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="ovo_vegetarian">Ovo-Vegetarian</string>
    <string name="lacto_vegetarian">Lacto-Vegetarian</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="diet_type">Diet type</string>
    <string name="drink">Drink</string>
    <string name="breakfast">Breakfast</string>
    <string name="bread">Bread</string>
    <string name="salad">Salad</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="snack">Snack</string>
    <string name="appetizer">Appetizer</string>
    <string name="dessert">Dessert</string>
    <string name="soup">Soup</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="lorem_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla laoreet nunc at velit lobortis malesuada. Pellentesque porta dictum lectus, a varius erat. Donec a eros in sapien porttitor volutpat. Duis elementum bibendum nisl, id posuere odio vestibulum id. Morbi dignissim ac augue non egestas. Etiam dapibus eros urna, non tristique ante faucibus ut. Proin quis nisl orci. Donec at viverra magna. Nunc et tellus posuere, convallis dolor in, euismod erat. Etiam condimentum elit lacinia posuere. Donec at suscipit arcu. Nunc ac bibendum nunc. Nullam egestas metus eu orci cursus egestas. Praesent sit amet ultricies tortor, sit amet vulputate justo. Curabitur nec nisl et turpis consectetur faucibus vitae ac dolor.</string>
    <string name="favorites_bottom_sheet_title">Add a new group of favorite foods:</string>
    <string name="add_group_edit_text_hint">Name</string>
    <string name="add">Add</string>
    <string name="save_to_favorites">Save to favorites</string>
    <string name="message_favorites_dialog">Choose your favorites group:</string>
    <string name="favorites_group_is_empty">Favorites group is empty.</string>
    <string name="choose_favorites_group_alert_title">Favorites groups</string>
    <string name="there_is_no_favorites_groups">There are no favorites groups.</string>
    <string name="addGroup_fab">to groups bottom sheet</string>
    <string name="delete_favorite_menu">Delete favorite menu</string>
    <string name="calendar">Calendar</string>
    <string name="name_placeholder">Name</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="dark_green">Dark green</string>
    <string name="marine">Marine</string>
    <string name="blue">Blue</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="select_color_for_your_group_theme">Select color for your group theme:</string>
    <string name="remove_group">Remove group</string>
    <string name="remove_group_alert_title">Delete this group of favorites?</string>
    <string name="add_to_favorites_failed">You have to create a favorites group.</string>
    <string name="removed_from_favorites_snack_bar">Removed from Favorites.</string>
    <string name="okay">Okay</string>
    <string name="recipe_saved_snack_message">Recipe saved.</string>
    <string name="overview">Overview</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="favorites_group_deleted">Favorites group deleted.</string>
    <string name="undo">Undo</string>
    <string name="calendar_today_is_empty">Calendar is empty.</string>
    <string name="save_to_calendar">Save to calendar</string>
    <string name="saved_to_calendar">Recipe saved to calendar.</string>
    <string name="get_shopping_list">Get shopping list</string>
    <string name="cuisine_type">Cuisine Type</string>
    <string name="african">African</string>
    <string name="american">American</string>
    <string name="british">British</string>
    <string name="cajun">Cajun</string>
    <string name="caribbean">Caribbean</string>
    <string name="chinese">Chinese</string>
    <string name="eastern_european">Eastern European</string>
    <string name="european">European</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="greek">Greek</string>
    <string name="indian">Indian</string>
    <string name="irish">Irish</string>
    <string name="italian">Italian</string>
    <string name="japanese">Japanese</string>
    <string name="jewish">Jewish</string>
    <string name="korean">Korean</string>
    <string name="latin_american">Latin American</string>
    <string name="mediterranean">Mediterranean</string>
    <string name="none">None</string>
    <string name="search_btn_text">Search</string>
    <string name="proceed_to_food_scanner_button">Proceed to food scanner button</string>
    <string name="open_bottomsheet_with_filters_options">Open bottomsheet with filters options</string>
    <string name="auto_accept">Auto accept</string>
    <string name="accept_result_btn">Accept result</string>
</resources>