<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        tools:context=".ui.main.fragments.recipes.bottomsheet.RecipesBottomSheet">

        <TextView
            android:id="@+id/addGroup_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/favorites_bottom_sheet_title"
            android:textColor="@color/dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/groupName_editText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/add_group_edit_text_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addGroup_textView" />

        <TextView
            android:id="@+id/selectColor_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:text="@string/select_color_for_your_group_theme"
            android:textColor="@color/dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupName_editText" />

        <HorizontalScrollView
            android:id="@+id/color_scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectColor_textView">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/color_chipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:checkedChip="@id/red_chip"
                    app:selectionRequired="true"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/red_chip"
                        style="@style/customChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/red" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/orange_chip"
                        style="@style/customChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/orange" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/yellow_chip"
                        style="@style/customChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yellow" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/green_chip"
                        style="@style/customChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/green" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/darkGreen_chip"
                        style="@style/customChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dark_green" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/marine_chip"
                        style="@style/customChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marine" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/blue_chip"
                        style="@style/customChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/blue" />
                </com.google.android.material.chip.ChipGroup>
            </LinearLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/add_btn"
            style="@style/btnDisabledStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:enabled="false"
            android:text="@string/add"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/color_scrollView"
            app:shapeAppearanceOverlay="@style/btn_squared" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>