<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <androidx.camera.view.PreviewView
            android:id="@+id/view_finder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:scaleType="fillStart" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/favorite_row_cardView"
            style="@style/card_stroke"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <CheckBox
                    android:id="@+id/autoAdd_checkBox"
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_accept"
                    app:layout_constraintEnd_toEndOf="@+id/autoAdd_checkBox"
                    app:layout_constraintStart_toStartOf="@+id/autoAdd_checkBox"
                    app:layout_constraintTop_toBottomOf="@+id/autoAdd_checkBox" />

                <Button
                android:id="@+id/acceptResult_button"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:hint="@string/accept_result_btn"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/colorSecondary"
                android:textColor="@color/white"
                android:textAllCaps="false"
                app:shapeAppearanceOverlay="@style/btn_squared"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView
                android:id="@+id/selectedResults_scrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/acceptResult_button">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/resultsToSelect_chipGroup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:checkedChip="@id/noneCuisine_chip"
                        app:singleLine="true">

                    </com.google.android.material.chip.ChipGroup>
                </LinearLayout>
            </HorizontalScrollView>

            <Button
                android:id="@+id/search_btn"
                style="@style/btnDisabledStyle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/search_btn_text"
                android:enabled="false"
                android:textAllCaps="false"
                app:shapeAppearanceOverlay="@style/btn_squared"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectedResults_scrollView" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
